force-app/main/default/objects/msmxSheet__MsmxApiCallChunk__c/msmxSheet__MsmxApiCallChunk__c.object-meta.xml
<CustomObject>
    <label>Mashmatrix API Call Chunk</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>