force-app/main/default/objects/msmxSheet__MsmxApiCallChunk__c/fields/msmxSheet__Chunk2__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Chunk2__c</fullName>
    <label>Chunk #2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>