force-app/main/default/objects/msmxSheet__MsmxApiCallChunk__c/fields/msmxSheet__Chunk3__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Chunk3__c</fullName>
    <label>Chunk #3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>